--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,24 +17,51 @@
   flex-wrap: wrap;
   justify-content: center;
 }
-.card {
+/* .card {
   border: 1px solid #042a2b;
+} */
+.card img {
+  border-radius: 40px;
 }
 .post_card {
   flex: 1 0 28.33%;
   margin: 5px;
   width: 100%;
   max-width: 270px;
+  border-radius: 40px;
+  box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.25),
+    -5px -5px 10px 2px rgba(0, 0, 0, 0.22);
+  cursor: pointer;
+  transition: 0.6s;
 }
+.post_card:hover {
+  transform: scale(0.9, 0.9);
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.25),
+    -5px -5px 30px rgba(0, 0, 0, 0.22);
+}
+
+.card-text a {
+  color: #042a2b;
+  font-weight: 500;
+}
+.myloader {
+  /* background-color: aqua; */
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .MuiAppBar-colorDefault {
   color: #fff !important;
   background-color: #042a2b !important;
 }
+
 /* extra small <576px */
 @media only screen and (max-width: 576px) {
   .post_card {
     flex: 1 0 85%;
-    margin: 5px;
+    margin: 20px auto;
   }
   .jumbo_col_ayu {
     text-align: center;
@@ -52,6 +79,6 @@
 @media only screen and (min-width: 992px) {
   .post_card {
     flex: 0 0 28.33%;
-    margin: 5px;
+    margin: 30px;
   }
 }
